--- a/style.css
+++ b/style.css
@@ -353,7 +353,6 @@ h4:hover {
   margin: 7% auto;
   padding: 20px;
   width: 80%;
-  min-width: 500px;
   max-width: 999px;
   border-radius: 6px;
 }
@@ -427,7 +426,6 @@ h4:hover {
   margin: 40px auto;
   padding: 20px;
   width: 90%;
-  min-width: 400px;
   max-width: 1024px;
   border-radius: 10px;
   opacity: 0.9;
@@ -644,13 +642,17 @@ h4:hover {
     padding: 0 5%;
   }
   .about-me-text {
-    width: 100%;
-    padding: 0;
+    width: 95%;
+  }
+  .modal-content {
+    padding: 10px;
+    width: 90%;
   }
   .contact-form-wrapper {
     height: fit-content;
     padding: 10px;
     margin: 10px;
+    width: 90%;
   }
   .contact-form-wrapper h2 {
     text-align: center;
