--- a/style.css
+++ b/style.css
@@ -196,15 +196,26 @@ section {
   padding: 20px;
   margin-top: 40px;
 }
+
 .about-me-p {
   font-size: 18px;
   line-height: 25px;
 }
+
 .about-me-img {
   width: 100%;
   height: fit-content;
 }
-.about-img {
+.about-img1 {
+  width: 100%;
+  height: 480px;
+  object-fit: cover;
+  display: block;
+  margin-top: 5rem;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+.about-img2 {
+  display: none;
   width: 100%;
   object-fit: cover;
 }
@@ -230,6 +241,70 @@ h4:hover {
   }
   75% {
     transform: scale(0.7, 1.2);
+  }
+}
+.react-section {
+  width: 100%;
+}
+.tag-list {
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  gap: 1rem 0;
+  position: relative;
+  padding: 1.5rem 0;
+  overflow: hidden;
+  margin: auto;
+}
+
+.inner {
+  display: flex;
+  width: fit-content;
+  animation-name: loop;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: var(--direction);
+  animation-duration: var(--duration);
+}
+
+.tag {
+  display: flex;
+  align-items: center;
+  gap: 0 0.2rem;
+  color: #e2e8f0;
+  font-size: 0.9rem;
+  background-color: #1a1a1a;
+  border-radius: 0.4rem;
+  padding: 0.7rem 1rem;
+  margin-right: 1rem;
+  box-shadow: 0 0.1rem 0.2rem rgb(0 0 0 / 20%), 0 0.1rem 0.5rem rgb(0 0 0 / 30%),
+    0 0.2rem 1.5rem rgb(0 0 0 / 40%);
+}
+
+.tag span {
+  font-size: 1.2rem;
+  color: whitesmoke;
+}
+
+.fade {
+  pointer-events: none;
+  background: linear-gradient(
+    90deg,
+    #1a1a1a,
+    transparent 30%,
+    transparent 60%,
+    #1a1a1a
+  );
+  position: absolute;
+  inset: 0;
+}
+
+@keyframes loop {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
 
@@ -600,9 +675,17 @@ h4:hover {
     height: 100vh;
   }
   .about-me-img {
-    width: 90%;
+    width: 97%;
     margin: 20px auto;
     min-width: 300px;
+  }
+  .about-img1 {
+    display: none;
+  }
+  .about-img2 {
+    display: block;
+    filter: grayscale(50%);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   }
   .about-me p {
     font-size: 16px;
