dac web add to projects

--- a/style.css
+++ b/style.css
@@ -475,6 +475,11 @@ h4:hover {
   object-fit: cover;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+#projectLink a {
+  color: skyblue;
+  text-decoration: underline;
+  font-weight: 500;
+}
 /*---------- Contact ---------- */
 #contact {
   height: 100vh;
